feat: wallet integration

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 SWAP_API_KEY="9c17af19-2654-4e05-8757-1d65b0ace0f8"
+SESSION_SECRET="ZjQ6O8uFQyK6rlFy1eXNITRD1Hf62N0yrYaGI4HCAvA="
+NEXT_PUBLIC_INFURA_ID="7a5c200ec4e145a99e3ee3099adcb0df"
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID="5e62752df53689148d1771072ec4737a"
+NEXT_PUBLIC_ALCHEMY_ID="4tL2_eO2F71Ri2NDZ01wlzWpnr1gM2cu"
