--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "connectkit": "^1.7.2",
     "framer-motion": "^11.0.15",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
@@ -30,6 +31,8 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.8.14",
+    "wagmi": "^2.5.11",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
