--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connectkit": "^1.7.2",
     "framer-motion": "^11.0.15",
     "lucide-react": "^0.358.0",
+    "moralis": "^2.25.1",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
     "react": "^18",
